--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apcomplete/prettier-plugin-sort-imports",
+  "name": "apcomplete-prettier-plugin-sort-imports",
   "version": "3.3.0",
   "description": "A prettier plugins to sort imports in provided RegEx order",
   "main": "lib/src/index.js",
